# blaze

./: .gitignore  LICENSE  README.md  flake.nix  module.nix
backend/: agent_client.py  auth.py  main.py  models.py  storage.py  utils.py
cli/: Cargo.toml
cli/src/: client.rs  config.rs  error.rs  main.rs  output.rs  types.rs
cli/src/commands/: add.rs  agent.rs  board.rs  edit.rs  list.rs  mod.rs  move_card.rs  ping.rs  plan.rs  rm.rs  show.rs  stats.rs
data-dev/: .token  board.json
docs/evolution/: git-timeline.md  hidden-patterns.md  sessions-analysis.md  tacit-knowledge.md  workflow-patterns.md
docs/evolution/projects/: agicash-agent.md
frontend/: README-PWA.md  app.js  document.css  document.html  document.js  filters.js  generate-icons.html  index.html  manifest.json  plans.css  plans.html  plans.js  style.css  sw.js  sync.js
plans/: sprint-cli.md
