[package]
name = "blaze"
version = "0.2.0"
edition = "2021"
description = "CLI for Blaze task board (JSON output)"
authors = ["Orveth"]
license = "MIT"
repository = "https://github.com/orveth/blaze"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
strip = true
